# TMA4280project

./: .job.sh.swp  .poisson.c.swp  .postProcessResults.c.swp  CMakeLists.txt  README.md  README.txt  compileProgram.sh  convergence.sh  exercise2.sh  exercise2_convergence.sh  exercise3.sh  exercise4.sh  exercise5.sh  job.sh  job2.sh  output.txt  output2.txt  parseOutput.py  plotResults.m  poisson.c  poisson.e6144310  poisson.e6144447  poisson.e6150221  poisson.e6150361  poisson.e6153297  poisson.e6153950  poisson.e6153985  poisson.e6155754  poisson.e6162653  poisson.e6166956  poisson.o6144310  poisson.o6144447  poisson.o6149771  poisson.o6150221  poisson.o6150360  poisson.o6150361  poisson.o6153297  poisson.o6153950  poisson.o6153985  poisson.o6155754  (+5 more)
postProcessing/: computeIntegral.m  exactSol.mw  plotResults.m  test_f.m
results/: exercise2_k12_t1.txt  exercise2_k12_t16.txt  exercise2_k12_t2.txt  exercise2_k12_t4.txt  exercise2_k12_t8.txt  exercise3_k10.txt  exercise3_k11.txt  exercise3_k12.txt  exercise3_k13.txt  exercise3_k14.txt  exercise3_k5.txt  exercise3_k6.txt  exercise3_k7.txt  exercise3_k8.txt  exercise3_k9.txt  exercise4_k10.txt  exercise4_k11.txt  exercise4_k12.txt  exercise4_k13.txt  exercise4_k14.txt
